weekFinal/terraform/vpc.tf
resource "aws_vpc" "edu-lohika-training-aws-vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = true
}
